# python-chalenge

./: .flake8  .gitignore  CODEOWNERS  Makefile  README.md  app.py  cdk.json  pyproject.toml  run.sh
event_processor/: event_processor_stack.py
event_processor/functions/: models.py  requirements.txt  validate.py
producers/producer1/: app.py
producers/producer2/: Dockerfile  app.py  run.sh
terraform/: cloud_watch.tf  kinesis.tf  lambda.tf  s3.tf  sns.tf  versions.tf
terraform/functions/validate/: main.py  models.py
