[tool.poetry]
name = "python-challenge"
version = "0.1.0"
description = ""
authors = ["João Corrêa <jfrcorrea@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
localstack = "3.7.2"
awscli-local = "0.22.0"
awscli = "1.34.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
